--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/p/unevalpy
+      url: https://pypi.org/p/pycodify
 
     steps:
       - name: Checkout code
